removed search icon and fixed profile__infoSub overflow issue

--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   padding: 12px 0;
+  overflow: auto;
 }
 
 .profile__main {
